Implement song generation using celery

--- a/webapp/templates/dreamsapp/song.html
+++ b/webapp/templates/dreamsapp/song.html
@@ -34,7 +34,7 @@
       <h1>
       	{{ song.title }}
   		{% if edit_link %}
-  		<small><a href="{{ edit_link }}"><i class="icon-pencil"></i> Edit</a></small>
+  		<small><a href="{{ edit_link }}">Edit</a></small>
   		{% endif %}
       </h1>
 
