--- a/webapp/templates/dreamsapp/sleep.html
+++ b/webapp/templates/dreamsapp/sleep.html
@@ -8,7 +8,13 @@
   <div class="row">
     <div class="span12">
 
-      <h2>Hello, {{ selected_user.first_name }}!</h2>
+      <h2>Generate music for {{ date|date }}</h2>
+      
+      
+      
+      
+      
+      
       <p>Here's a list of your recent measured nights. Select one for which to make music!</p>
       
       <table class="table table-striped table-bordered">
@@ -24,13 +30,7 @@
 	  <tr>
 	    <td>{{ night.date|date }}</td>
 	    <td>{{ night.time_sleeping|hoursminutes|default:"(Not slept)" }}</td>
-	    <td>
-	    	<form action="{% url song_create %}" method="POST" style="margin-bottom: 0;">
-	    		<input type="hidden" name="date" value="{{ night.date|date:'Y-m-d' }}">
-	    		{% csrf_token %}
-	    		<button type="submit" class="btn"><i class="icon-circle-arrow-right"></i> Generate music</button>
-	    	</form>
-    	</td>
+	    <td><a class="btn" href="">Generate music</a></td>
 	  </tr>
 	  {% empty %}
 	  <tr><td span="3"><em>Hmm, you don't seem have any sleep info :/</em></td></tr>
