Update home page intro

--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -7,7 +7,7 @@
 
 			<p>
 			<div style="background-color: #def; height: 250px; padding: 20px;">
-				<h1>Sleep to Music</h1>
+				<h1>Sleep musicalization</h1>
 
 				<h2>
 					<small>Sonification of data is cool stuff which gives you a
@@ -27,17 +27,20 @@
 	<div class="row">
 
 		<div class="span6">
-			<h2>What?</h2>
+			<h2>Introduction</h2>
 
-			<p>A short explanation of what this is</p>
+			<p>Data musicalization is a new way to aid analysis and understanding of sleep
+			measurement data.</p>
+			
+			<p>The project is done at <a href="http://cs.helsinki.fi">Computer science department</a> 
+			of University of Helsinki.</p>
 
-			<h2>How?</h2>
+			<p>The sleep measurement is based on <a href="http://beddit.com">Beddit sensor</a>.
+			Data measured with Beddit is accessed via their public API, and automatic music 
+			composition algorithm is used to generate a song from the sleep data.</p>
 
-			<p>Layman description of how it works</p>
-
-			<h2>Why?</h2>
-
-			<p>:)</p>
+			<p>Sleep musicalization produces music that reflects the user's and complements
+			visualizations of sleep measurements.</p>
 
 		</div>
 
@@ -54,7 +57,7 @@
 					class="icon-chevron-right"></i> View all ({{ total_songs }})</a>
 			</p>
 
-			<h3>Share</h3>
+			<h3>Tell your friends</h3>
 
 			<p>Like buttons (Also implement sharing of songs for Beddit
 				users)
@@ -79,10 +82,40 @@
 			<h2>
 				<a name="team"></a>Team
 			</h2>
+		</div>
+	</div>
 
-			<p>Credits here...
-			<h3>Media contact</h3>
-			Hannu?
+	<div class="row">
+		<div class="span3">
+			<h3>
+				Aurora Tulilaulu<br>
+				<small>Music composition</small>
+			</h3>
+			<p>Short intro here
+		</div>
+		
+		<div class="span3">
+			<h3>
+				Joonas Paalasmaa<br>
+				<small>Sleep data analysis</small>
+			</h3>
+			<p>Short intro here
+		</div>
+		
+		<div class="span3">
+			<h3>
+				Mikko Waris<br>
+				<small>This website</small>
+			</h3>
+			<p>Short intro here
+		</div>
+		
+		<div class="span3">
+			<h3>
+				Hannu Toivonen<br>
+				<small>Professor</small>
+			</h3>
+			<p>Short intro here
 		</div>
 	</div>
 
