--- a/webapp/templates/dreamsapp/song_edit.html
+++ b/webapp/templates/dreamsapp/song_edit.html
@@ -33,7 +33,8 @@
 	
 		<h1>Here's your song</h1>
 	
-		<p>Now you can listen to it, and then optionally add a title and publish it!
+		<p>Copy-paste the following link to share this to your friends:<br>
+		<input value="http://music.beddit.com{% url song song.key %}" class="span5">  
 	
 		<!-- jquery player -->
 		  <div id="jquery_jplayer_1" class="jp-jplayer"></div>
@@ -77,10 +78,14 @@
 		    </div>
 		  </div>
 
+		<h2>Add some details</h2>
+
 		<form action="" method="POST">
-			{{ form.as_p }}
-			{% csrf_token %} 
-			<p><button type="submit" class="btn btn-primary"><i class="icon-ok icon-white"></i> Save</button>
+			<table>
+				{{ form.as_table }}
+				{% csrf_token %} 
+				<tr><td></td><td><button type="submit" class="btn btn-primary"><i class="icon-ok icon-white"></i> Save</button></td></tr>
+			</table>
 		</form>
 		
       </div>
