Change site name to Sleep musicalization

--- a/webapp/templates/dreamsapp/base.html
+++ b/webapp/templates/dreamsapp/base.html
@@ -4,7 +4,7 @@
 
   <head>
   
-  	<title>Sleep to music</title>
+  	<title>Sleep musicalization - Turn your sleep data into music!</title>
 
     <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/dreams.css" type="text/css">
@@ -28,7 +28,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
 	<div class="container">
-	  <a class="brand" href="/">Sleep to music</a>
+	  <a class="brand" href="/">Sleep musicalization</a>
 	  
 	  <ul class="nav">
 	    <li><a href="{% url home %}#how_it_works">How it works</a>
