Update home page texts, add social media buttons and disqus

--- a/webapp/templates/dreamsapp/base.html
+++ b/webapp/templates/dreamsapp/base.html
@@ -4,7 +4,7 @@
 
   <head>
   
-  	<title>Sleep musicalization - Turn your sleep data into music!</title>
+  	<title>Sleep musicalization - A novel approach to turn your data into personally composed music</title>
 
     <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/dreams.css" type="text/css">
@@ -66,6 +66,34 @@
 
     {% block body %}
     {% endblock %}
+    
+   
+   	<!-- Facebook like button script -->
+	
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
+	
+	
+	<!-- Twitter -->
+	
+	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+	
+
+	<!-- Place this render call where appropriate -->
+	
+	<script type="text/javascript">
+	  (function() {
+	    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+	    po.src = 'https://apis.google.com/js/plusone.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+	  })();
+	</script>
   </body>
 
 </html>
