Fix how it works -link

--- a/webapp/templates/dreamsapp/base.html
+++ b/webapp/templates/dreamsapp/base.html
@@ -31,7 +31,7 @@
 	  <a class="brand" href="/">Sleep musicalization</a>
 	  
 	  <ul class="nav">
-	    <li><a href="{% url home %}#how_it_works">How it works</a>
+	    <li><a href="{% url home %}#introduction">How it works</a>
 	    <li><a href="{% url home %}#publications">Publications</a>
 	    <li><a href="{% url song_index %}">Songs</a>
 	    <li><a href="{% url home %}#team">Team</a>
