--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -22,7 +22,7 @@
 	<div class="row">
 
 		<div class="span7">
-			<h1>Introduction</h1>
+			<h1><a name="introduction"></a>Introduction</h1>
 
 			<p>Data musicalization is a new way to aid analysis and understanding of sleep
 			measurement data.</p>
