--- a/webapp/templates/dreamsapp/song.html
+++ b/webapp/templates/dreamsapp/song.html
@@ -85,7 +85,7 @@
 	  	<h3>Share this song</h3>
 
 		<p>Copy-paste the following link to email, discussion, etc:
-		<p><input value="http://sleeptomusic.com{% url song song.key %}" class="span6">      
+		<p><input value="http://sleepmusicaliation.net{% url song song.key %}" class="span6">      
       
       
       {% else %}
