--- a/webapp/templates/dreamsapp/song_edit.html
+++ b/webapp/templates/dreamsapp/song_edit.html
@@ -34,7 +34,7 @@
 		<h1>Here's your song</h1>
 	
 		<p>Copy-paste the following link to share this to your friends:<br>
-		<input value="http://music.beddit.com{% url song song.key %}" class="span5">  
+		<input value="http://sleepmusicalization.net{% url song song.key %}" class="span5">  
 	
 		<!-- jquery player -->
 		  <div id="jquery_jplayer_1" class="jp-jplayer"></div>
