--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -24,17 +24,17 @@
 		<div class="span7">
 			<h1><a name="introduction"></a>Introduction</h1>
 
-			<p>Data musicalization is a new way to aid analysis and understanding of sleep
+			<p>Sleep musicalization is a new way to aid the analysis and understanding of sleep
 			measurement data.</p>
 			
-			<p>The project is done at <a href="http://cs.helsinki.fi">Computer science department</a> 
+			<p>The project has been done at <a href="http://cs.helsinki.fi">Computer science department</a> 
 			of University of Helsinki.</p>
 
-			<p>The sleep measurement is based on <a href="http://beddit.com">Beddit sensor</a>.
-			Data measured with Beddit is accessed via their public API, and automatic music 
+			<p>The sleep measurement is based on <a href="http://beddit.com">Beddit</a> sleep measurement sensor.
+			Sleep measurements are retrieved from the Beddit service via their public API, and automatic music 
 			composition algorithm is used to generate a song from the sleep data.</p>
 
-			<p>Sleep musicalization produces music that reflects the user's and complements
+			<p>Sleep musicalization produces music that complements
 			visualizations of sleep measurements.</p>
 
 
@@ -42,7 +42,11 @@
 				<a name="publications"></a>Publications
 			</h2>
 
-			<p>List of publications, conferences, etc.
+			<p>Tulilaulu, A., Paalasmaa, J., Waris, M. &amp; Toivonen, H. 2012.
+			<b>Sleep Musicalization: Automatic Music Composition from Sleep Measurements.</b>
+			In <span style="font-style:italic;">The Eleventh International Symposium on Intelligent Data Analysis (IDA 2012)</span>.
+			[<a href="http://www.cs.helsinki.fi/u/htoivone/pubs/sleepmusicalization_ida_2012.pdf">PDF</a>]
+			</p>
 
 
 		</div>
