--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -100,7 +100,7 @@
 		
 		<div class="span3">
 			<h3>
-				Joonas Paalasmaa<br>
+				<a href="http://www.cs.helsinki.fi/u/jpaalasm/">Joonas Paalasmaa</a><br>
 				<small>Sleep data analysis</small>
 			</h3>
 		
@@ -116,7 +116,7 @@
 		
 		<div class="span3">
 			<h3>
-				Hannu Toivonen<br>
+				<a href="http://www.cs.helsinki.fi/u/htoivone/">Hannu Toivonen</a><br>
 				<small>Professor</small>
 			</h3>
 			
