--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -8,7 +8,9 @@
 			<div class="hero-unit">
 				<h1>Sleep musicalization</h1>
 
-				<p>Musicalization of data is a novel approach to turn your data into personally composed music.</p>
+				<p>Feel your data as a unique musical experience! 
+				<br/>
+				Musicalization of data is a novel approach to turn information into composed music.</p>
 
 				<p>
 					<a class="btn btn-primary btn-large" href="{{ authorize_url }}">
@@ -24,28 +26,34 @@
 		<div class="span7">
 			<h1><a name="introduction"></a>Introduction</h1>
 
-			<p>Sleep musicalization is a new way to aid the analysis and understanding of sleep
+			<p>Sleep musicalization is a novel way to aid the analysis and understanding of sleep
 			measurement data.</p>
-			
-			<p>The project has been done at <a href="http://cs.helsinki.fi">Computer science department</a> 
-			of University of Helsinki.</p>
 
-			<p>The sleep measurement is based on <a href="http://beddit.com">Beddit</a> sleep measurement sensor.
-			Sleep measurements are retrieved from the Beddit service via their public API, and automatic music 
+			automatic music 
 			composition algorithm is used to generate a song from the sleep data.</p>
 
 			<p>Sleep musicalization produces music that complements
 			visualizations of sleep measurements.</p>
 
 
+			<p>The musicalization project has been carried out in the 
+			<a href="http://www.cs.helsinki.fi/en/discovery">Discovery Research Group</a>
+			at the <a href="http://www.helsinki.fi/university/">University of Helsinki</a>.</p>
+
+			<p>Sleep analysis is based on the <a href="http://beddit.com">Beddit</a> sleep measurement sensor.
+			Sleep measurements and analysis results are retrieved from the Beddit service, by the user's authorization.
+
 			<h2>
-				<a name="publications"></a>Publications
+				<a name="publications"></a>Publications and Press
 			</h2>
 
 			<p>Tulilaulu, A., Paalasmaa, J., Waris, M. &amp; Toivonen, H. 2012.
 			<b>Sleep Musicalization: Automatic Music Composition from Sleep Measurements.</b>
 			In <span style="font-style:italic;">The Eleventh International Symposium on Intelligent Data Analysis (IDA 2012)</span>.
 			[<a href="http://www.cs.helsinki.fi/u/htoivone/pubs/sleepmusicalization_ida_2012.pdf">PDF</a>]
+			</p>
+
+			<p><a href="">Yöunesta voi nyt säveltää automaattisesti musiikkia</a>, press release (in Finnish)	
 			</p>
 
 
