--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -8,9 +8,9 @@
 			<div class="hero-unit">
 				<h1>Sleep musicalization</h1>
 
-				<p>Feel your data as a unique musical experience! 
+				<p>Perceive your sleep as a unique musical experience! 
 				<br/>
-				Musicalization of data is a novel approach to turn information into composed music.</p>
+				Musicalization turns data into a genuine piece of composed music, not just sounds.</p>
 
 				<p>
 					<a class="btn btn-primary btn-large" href="{{ authorize_url }}">
@@ -26,22 +26,37 @@
 		<div class="span7">
 			<h1><a name="introduction"></a>Introduction</h1>
 
-			<p>Sleep musicalization is a novel way to aid the analysis and understanding of sleep
-			measurement data.</p>
+			<p>
+			Sleep musicalization is a novel way of  
+			perceiving and experiencing sleep measurement data.
+			The goal is to help users understand and analyze their 
+			sleeping patterns and eventually improve their sleep.
+			</p>
+			
+			<p>
+			The musicalization process follows musicological 
+			principles when composing a melody, designing the rhythm
+			and changes in tempo, arranging the accompaniment, 
+			and playing out the music at different levels of volume. 
+			These aspects are inspired but not dictated
+			by the data. The result of musicalization of eight hours
+			of sleep is an origianal piece of couple of minutes of music.
+			</p>			
+			
+			<p>
+			Musicalization of data provides a whole new way to experience 
+			data as a music. Music has a unique capability to invoke emotions, 
+			giving users a novel opportunity to perceive their data 
+			also as innate feelings. In the case of sleep measurements, musicalization
+			complements the more informative, no-nonsense visual results
+			with an emotional component towards one's own sleep.
+			</p>
 
-			automatic music 
-			composition algorithm is used to generate a song from the sleep data.</p>
-
-			<p>Sleep musicalization produces music that complements
-			visualizations of sleep measurements.</p>
-
-
-			<p>The musicalization project has been carried out in the 
-			<a href="http://www.cs.helsinki.fi/en/discovery">Discovery Research Group</a>
-			at the <a href="http://www.helsinki.fi/university/">University of Helsinki</a>.</p>
-
-			<p>Sleep analysis is based on the <a href="http://beddit.com">Beddit</a> sleep measurement sensor.
-			Sleep measurements and analysis results are retrieved from the Beddit service, by the user's authorization.
+			<p>
+			Sleep analysis in our service is based on the <a href="http://beddit.com">Beddit</a> sleep measurement sensor.
+			Sleep measurements and analysis results are retrieved from the Beddit service, by the user's authorization,
+			and the musicalized into novel pieces of music.
+			</p>
 
 			<h2>
 				<a name="publications"></a>Publications and Press
@@ -53,7 +68,7 @@
 			[<a href="http://www.cs.helsinki.fi/u/htoivone/pubs/sleepmusicalization_ida_2012.pdf">PDF</a>]
 			</p>
 
-			<p><a href="">Yöunesta voi nyt säveltää automaattisesti musiikkia</a>, press release (in Finnish)	
+			<p><a href="http://www.cs.helsinki.fi/u/htoivone/pubs/sleepmusicalization_press_fi.pdf">Yöunesta voi nyt säveltää automaattisesti musiikkia</a>, press release Sep 6th, 2012 (in Finnish)	
 			</p>
 
 
@@ -101,7 +116,7 @@
 		<div class="span3">
 			<h3>
 				Aurora Tulilaulu<br>
-				<small>Music composition</small>
+				<small>Music composition algorithms</small>
 			</h3>
 		
 		</div>
@@ -109,7 +124,7 @@
 		<div class="span3">
 			<h3>
 				<a href="http://www.cs.helsinki.fi/u/jpaalasm/">Joonas Paalasmaa</a><br>
-				<small>Sleep data analysis</small>
+				<small>Sleep data analysis methods</small>
 			</h3>
 		
 		</div>
@@ -117,7 +132,7 @@
 		<div class="span3">
 			<h3>
 				Mikko Waris<br>
-				<small>This website</small>
+				<small>Website</small>
 			</h3>
 		
 		</div>
@@ -125,7 +140,7 @@
 		<div class="span3">
 			<h3>
 				<a href="http://www.cs.helsinki.fi/u/htoivone/">Hannu Toivonen</a><br>
-				<small>Professor</small>
+				<small>Supervision</small>
 			</h3>
 			
 		</div>
@@ -134,9 +149,29 @@
 
 	<div class="row">
 		<div class="span12">
-			<h2>Funding</h2>
+			<h2>Thanks</h2>
 
-			<p>This work has been supported by the Algorithmic Data Analysis (Algodan) Centre of Excellence of the Academy of Finland and by the University of Helsinki.
+			<p>The musicalization project has been carried out in the 
+			<a href="http://www.cs.helsinki.fi/en/discovery">Discovery Research Group</a>
+			at the <a href="http://www.helsinki.fi/university/">University of Helsinki</a>.</p>
+
+			<p>A big thank you to the 
+			<a href="http://www.cs.helsinki.fi/research/algodan/">Algorithmic Data Analysis (Algodan)</a> 
+			Centre of Excellence of the Academy of Finland, 
+			and to the <a href="http://www.cs.helsinki.fi/en">Department of Computer Science</a> 
+			of the University of Helsinki for their financial support! 
+			</p>
+		</div>
+	</div>
+
+
+	<div class="row">
+		<div class="span12">
+			<h2>Contact</h2>
+
+			<p>Data mining and musicalization research: <a href="http://www.cs.helsinki.fi/u/htoivone/">Prof. Hannu Toivonen</a>. 
+			Sleep analysis methods and services: <a href="http://www.beddit.com">Beddit Ltd.</a>.
+			</p>
 		</div>
 	</div>
 
