--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -10,7 +10,7 @@
 
 				<p>Perceive your sleep as a unique musical experience! 
 				<br/>
-				Musicalization turns data into a genuine piece of composed music, not just sounds.</p>
+				Musicalization turns data into a genuine piece of composed music.</p>
 
 				<p>
 					<a class="btn btn-primary btn-large" href="{{ authorize_url }}">
