--- a/webapp/templates/dreamsapp/base.html
+++ b/webapp/templates/dreamsapp/base.html
@@ -4,7 +4,7 @@
 
   <head>
   
-  	<title>Sleep musicalization - A novel approach to turn your data into personally composed music</title>
+  	<title>Sleep musicalization - Perceive your sleep as a unique musical experience!</title>
 
     <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/dreams.css" type="text/css">
@@ -31,7 +31,7 @@
 	  <a class="brand" href="/">Sleep musicalization</a>
 	  
 	  <ul class="nav">
-	    <li><a href="{% url song_index %}">Generated songs</a>
+	    <li><a href="{% url song_index %}">Composed songs</a>
 	  </ul>
 	    {% if request.session.beddit_user %}
 	    <ul class="nav pull-right">
