--- a/webapp/templates/dreamsapp/sleep.html
+++ b/webapp/templates/dreamsapp/sleep.html
@@ -8,14 +8,14 @@
   <div class="row">
     <div class="span12">
 
-      <h2>Generate music for {{ date|date }}</h2>
+      <h2>Compose music for {{ date|date }}</h2>
       
       
       
       
       
       
-      <p>Here's a list of your recent measured nights. Select one for which to make music!</p>
+      <p>Here's a list of your recent measured nights. Select one for which to compose music!</p>
       
       <table class="table table-striped table-bordered">
 	<thead>
@@ -30,7 +30,7 @@
 	  <tr>
 	    <td>{{ night.date|date }}</td>
 	    <td>{{ night.time_sleeping|hoursminutes|default:"(Not slept)" }}</td>
-	    <td><a class="btn" href="">Generate music</a></td>
+	    <td><a class="btn" href="">Compose music</a></td>
 	  </tr>
 	  {% empty %}
 	  <tr><td span="3"><em>Hmm, you don't seem have any sleep info :/</em></td></tr>
