--- a/webapp/templates/dreamsapp/song.html
+++ b/webapp/templates/dreamsapp/song.html
@@ -31,10 +31,11 @@
   <div class="row" style="margin-bottom:40px;">
     <div class="span6">
     
-	    <p>Data musicalization is a new way to aid analysis and understanding of sleep measurement data.
+	<p>Perceive your sleep as a unique musical experience!</p>
+
+	<p>Musicalization turns data into a genuine piece of composed music.</p>
 	
-		<p>The project is done at Computer science department of University of Helsinki.
-		
+	<p>See the Sleep Musicalization home page at <a href="http://sleepmusicalization.net/">sleepmusicalization.net</a> for more information.</p>
 	
 	</div>
     <div class="span6">
