--- a/webapp/templates/dreamsapp/song_wait_finished.html
+++ b/webapp/templates/dreamsapp/song_wait_finished.html
@@ -15,7 +15,15 @@
 	
 		<h1>Just a moment...</h1>
 	
-		<p>Your song is being generated, please wait. This may take a couple of minutes.</p>
+		<p>Your song is being composed, please wait. 
+		I am trying to come up with a good melody and rhythm to match your sleep stages, 
+		creating a suitable accompaniment for it with matching chord sequence. 
+		I will then play the music on a piano to an mp3 file. 
+		I will roughly adjust the tempo to your heart rate, and will play louder whenever
+		you moved a lot during sleep.</p>
+
+		<p>Bear with me for couple of minutes. It is difficult to be artistic under 
+		a lot of pressure.</p>
 			
       </div>
     </div>
