--- a/webapp/templates/dreamsapp/song_wait_finished.html
+++ b/webapp/templates/dreamsapp/song_wait_finished.html
@@ -23,7 +23,7 @@
 		you moved a lot during sleep.</p>
 
 		<p>Bear with me for couple of minutes. It is difficult to be artistic under 
-		a lot of pressure.</p>
+		a lot of time pressure!</p>
 			
       </div>
     </div>
