--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -170,7 +170,7 @@
 			<h2>Contact</h2>
 
 			<p>Data mining and musicalization research: <a href="http://www.cs.helsinki.fi/u/htoivone/">Prof. Hannu Toivonen</a>. 
-			Sleep analysis methods and services: <a href="http://www.beddit.com">Beddit Ltd.</a>.
+			Sleep analysis methods and services: <a href="http://www.beddit.com">Beddit Ltd</a>.
 			</p>
 		</div>
 	</div>
