--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -55,7 +55,7 @@
 			<p>
 			Sleep analysis in our service is based on the <a href="http://beddit.com">Beddit</a> sleep measurement sensor.
 			Sleep measurements and analysis results are retrieved from the Beddit service, by the user's authorization,
-			and the musicalized into novel pieces of music.
+			and then musicalized by composing a novel pieces of music.
 			</p>
 
 			<h2>
@@ -64,7 +64,8 @@
 
 			<p>Tulilaulu, A., Paalasmaa, J., Waris, M. &amp; Toivonen, H. 2012.
 			<b>Sleep Musicalization: Automatic Music Composition from Sleep Measurements.</b>
-			In <span style="font-style:italic;">The Eleventh International Symposium on Intelligent Data Analysis (IDA 2012)</span>.
+			In <span style="font-style:italic;">The Eleventh International Symposium on Intelligent Data Analysis (IDA 2012)</span>, 
+			LNCS 7619, 392-403. Springer 2012.
 			[<a href="http://www.cs.helsinki.fi/u/htoivone/pubs/sleepmusicalization_ida_2012.pdf">PDF</a>]
 			</p>
 
