--- a/webapp/templates/dreamsapp/song.html
+++ b/webapp/templates/dreamsapp/song.html
@@ -33,17 +33,38 @@
     
 	<p>Perceive your sleep as a unique musical experience!</p>
 
-	<p>Musicalization turns data into a genuine piece of composed music.</p>
+	<p>Sleep musicalization is a novel way of perceiving and experiencing sleep measurement data. 
+	The goal is to help users understand 
+	and analyze their sleeping patterns and eventually improve their sleep. 
+	</p>
 	
-	<p>See the Sleep Musicalization home page at <a href="http://sleepmusicalization.net/">sleepmusicalization.net</a> for more information.</p>
+	<p>
+	Musicalization of data provides a whole new way to experience data as a music. 
+	Music has a unique capability to invoke emotions, giving users a novel opportunity 
+	to perceive their data also as innate feelings. 
+	In the case of sleep measurements, musicalization complements the more informative, 
+	no-nonsense visual results with an emotional component towards one's own sleep. 
+	</p>
 	
 	</div>
     <div class="span6">
     
-		
-		<p>The sleep measurement is based on Beddit sensor. Data measured with Beddit is accessed via their public API, and automatic music composition algorithm is used to generate a song from the sleep data.
-		
-		<p>Sleep musicalization produces music that reflects the user's and complements visualizations of sleep measurements.
+		<p>The musicalization process follows musicological principles when composing a melody, 
+		designing the rhythm and changes in tempo, arranging the accompaniment, 
+		and playing out the music at different levels of volume. 
+		These aspects are inspired but not dictated by the data. 
+		The result of musicalization of eight hours of sleep is an origianal piece of couple 
+		of minutes of music.
+		</p> 
+
+		<p>
+		Sleep analysis in this service is based on the <a href="http://beddit.com">Beddit</a> 
+		sleep measurement sensor. 
+		Sleep measurements and analysis results are retrieved from the Beddit service, 
+		by the user's authorization, and then composed into a novel piece of music. 
+		</p>
+
+		<p>See the Sleep Musicalization home page at <a href="http://sleepmusicalization.net/">sleepmusicalization.net</a> for more information.</p>
 
 	</div>
   </div>
