--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -53,9 +53,9 @@
 			</p>
 
 			<p>
-			Sleep analysis in our service is based on the <a href="http://beddit.com">Beddit</a> sleep measurement sensor.
+			Sleep analysis in this service is based on the <a href="http://beddit.com">Beddit</a> sleep measurement sensor.
 			Sleep measurements and analysis results are retrieved from the Beddit service, by the user's authorization,
-			and then musicalized by composing a novel pieces of music.
+			and then musicalized by composing a novel piece of music.
 			</p>
 
 			<h2>
