--- a/webapp/templates/dreamsapp/song.html
+++ b/webapp/templates/dreamsapp/song.html
@@ -61,7 +61,7 @@
 		Sleep analysis in this service is based on the <a href="http://beddit.com">Beddit</a> 
 		sleep measurement sensor. 
 		Sleep measurements and analysis results are retrieved from the Beddit service, 
-		by the user's authorization, and then composed into a novel piece of music. 
+		by the user's authorization, and then musicalized by composing a novel piece of music.
 		</p>
 
 		<p>See the Sleep Musicalization home page at <a href="http://sleepmusicalization.net/">sleepmusicalization.net</a> for more information.</p>
