--- a/webapp/templates/dreamsapp/song.html
+++ b/webapp/templates/dreamsapp/song.html
@@ -135,7 +135,7 @@
       
       {% else %}
       
-      	<p>Choose a song from the list --></p>
+      	<p><b><font size="+1">Choose a song from the list &rArr;</font></b></p>
       
       {% endif %}
       
