Add missing raphael

--- a/webapp/templates/dreamsapp/song.html
+++ b/webapp/templates/dreamsapp/song.html
@@ -6,6 +6,7 @@
 {% block head %}
 	{% if song %}
 	  <script src="{{ STATIC_URL }}js/datetimeutils.js"></script>  
+	  <script src="{{ STATIC_URL }}js/raphael-2.0.1-min.js"></script>  
 	  <script src="{{ STATIC_URL }}js/nightvisualization.js"></script>  
 	
 	  <script type="text/javascript">
